--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start:bridge": "node dist/app/telegramBridge.js",
     "cli": "node dist/app/cli.js",
     "test": "npm run build:app && node --test dist/app/test/*.test.js",
-    "guard:ai-review": "npm run build:app && node dist/app/aiReviewGuard.js --policy .faye/ai-review-guard.policy.json"
+    "guard:seven-shadow": "npm --prefix governance/seven-shadow-system install && npm --prefix governance/seven-shadow-system run build && node governance/seven-shadow-system/dist/src/sevenShadowSystem.js --policy .seven-shadow/policy.json",
+    "guard:ai-review": "npm run guard:seven-shadow"
   },
   "engines": {
     "node": ">=20"
