feat: complete five-task reliability, distribution, and governance upgrades

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start:bridge": "node dist/app/telegramBridge.js",
     "cli": "node dist/app/cli.js",
     "test": "npm run build:app && node --test dist/app/test/*.test.js",
+    "canary": "./scripts/canary-smoke.sh",
+    "security:check": "./scripts/security-check.sh",
     "guard:seven-shadow": "npm --prefix governance/seven-shadow-system ci && npm --prefix governance/seven-shadow-system run build && node governance/seven-shadow-system/dist/src/sevenShadowSystem.js",
     "guard:ai-review": "npm run guard:seven-shadow -- --policy .seven-shadow/policy.json",
     "demo": "./scripts/demo.sh"
