--- a/.github/workflows/ci-quality.yml
+++ b/.github/workflows/ci-quality.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Security Pattern Check
+        run: ./scripts/security-check.sh
+
       - name: Build
         run: npm run build
 
