--- a/.github/workflows/release-readiness.yml
+++ b/.github/workflows/release-readiness.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Security Pattern Check
+        run: ./scripts/security-check.sh
+
       - name: Build
         run: npm run build
 
@@ -50,6 +53,7 @@ jobs:
 
           - Build: passed
           - Tests: passed
+          - Security pattern check: passed
           - Docs contract: passed
           - Seven Shadow gauntlet (2x): passed
 
