--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "start:api": "node dist/app/index.js",
     "start:bridge": "node dist/app/telegramBridge.js",
     "cli": "node dist/app/cli.js",
-    "test": "npm run build:app && node --test dist/app/test/*.test.js",
+    "test:app": "npm run build:app && node --test dist/app/test/*.test.js",
+    "test:ops": "node --test scripts/test/*.test.mjs",
+    "test": "npm run test:app && npm run test:ops",
     "canary": "./scripts/canary-smoke.sh",
     "security:check": "./scripts/security-check.sh",
     "always-on:proof": "./scripts/always-on-proof.sh",
     "burn-in:day": "./scripts/burn-in-day.sh",
+    "burn-in:gate-check": "node ./scripts/burn-in-gate-check.mjs",
+    "burn-in:exit-check": "node ./scripts/burn-in-exit-check.mjs",
+    "triage:sla-check": "node ./scripts/triage-sla-check.mjs",
     "guard:seven-shadow": "npm --prefix governance/seven-shadow-system ci && npm --prefix governance/seven-shadow-system run build && node governance/seven-shadow-system/dist/src/sevenShadowSystem.js",
     "guard:ai-review": "npm run guard:seven-shadow -- --policy .seven-shadow/policy.json",
     "demo": "./scripts/demo.sh"
