--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preflight": "./scripts/preflight.sh",
     "test:app": "npm run build:app && node --test dist/app/test/*.test.js",
     "test:ops": "node --test scripts/test/*.test.mjs",
+    "test:dashboard": "playwright test -c playwright.dashboard.config.ts",
     "test": "npm run test:app && npm run test:ops",
     "canary": "./scripts/canary-smoke.sh",
     "security:check": "./scripts/security-check.sh",
@@ -34,6 +35,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.13.4",
     "typescript": "^5.7.3"
