--- a/.github/workflows/changelog-automation.yml
+++ b/.github/workflows/changelog-automation.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   update-changelog:
@@ -22,14 +23,19 @@ jobs:
       - name: Update changelog
         run: ./scripts/update-changelog.sh
 
-      - name: Commit changelog
-        run: |
-          if git diff --quiet; then
-            echo "No changelog changes"
-            exit 0
-          fi
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add CHANGELOG.md
-          git commit -m "chore: update changelog"
-          git push
+      - name: Open changelog pull request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: cx/changelog-auto-${{ github.run_id }}
+          base: main
+          commit-message: chore: update changelog
+          title: chore: update changelog
+          body: |
+            Automated changelog refresh after a `main` update.
+          labels: |
+            automation
+            changelog
+          delete-branch: true
+          add-paths: |
+            CHANGELOG.md
