--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "burn-in:gate-check": "node ./scripts/burn-in-gate-check.mjs",
     "burn-in:exit-check": "node ./scripts/burn-in-exit-check.mjs",
     "triage:sla-check": "node ./scripts/triage-sla-check.mjs",
+    "prompt-cache:contract": "./scripts/prompt-cache-contract-check.sh",
+    "prompt-cache:smoke": "./scripts/prompt-cache-smoke.sh",
+    "prompt-cache:baseline": "node ./scripts/prompt-cache-baseline.mjs",
     "guard:seven-shadow": "npm --prefix governance/seven-shadow-system ci && npm --prefix governance/seven-shadow-system run build && node governance/seven-shadow-system/dist/src/sevenShadowSystem.js",
     "guard:ai-review": "npm run guard:seven-shadow -- --policy .seven-shadow/policy.json",
     "demo": "./scripts/demo.sh",
